subject-details.html

--- a/subject-details.html
+++ b/subject-details.html
@@ -172,24 +172,16 @@
 </head>
 
 <body>
-     <header>
+    <header>
         <div class="container">
-            <h1 id="apna">Apna Engineering Wallah</h1>
+            <h1>Apna Engineering Wallah</h1>
             <nav>
-
-                <button class="hamburger" id="hamburger">
-                    ☰
-                  </button>
-                  <ul class="nav-links" id="nav-links">
-                    <button class="close" id="close-btn">✖</button>
-                    <a href="#about">About</a>
-                    <a href="#services">Services</a>
-                    <a href="#courses">Material</a>
-                    <a href ="https://apnaengineeringwallah.akamai.net.in/"target="_blank">Courses</a>
-                    <a href="#testimonials">Testimonials</a>
-                    <a href="#contact">Contact</a>
-                  </ul>
-                </nav>
+                <a href="#about">About</a>
+                <a href="#services">Services</a>
+                <a href="#courses">Free Study Material</a>
+                <a href="#why-choose-us">Why Us</a>
+                <a href="#testimonials">Testimonials</a>
+                <a href="#contact">Contact</a>
             </nav>
         </div>
     </header>
